--- a/index.html
+++ b/index.html
@@ -2,21 +2,27 @@
 <html lang="">
 
 <head>
-    <title>mi pasatiempo</title>
+    <title>mis cosas</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <img src="IMG_5728.jpg">
-    <h1>me pasatiempo numero 1 es mirar la cara de mi perro</h1>
-    <h3>mi perro se me hace muy hermoso y por eso siempre lo miro</h3>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <img src="91HHems0BVL.jpg">
-    <h1>mi pasatiempo numero 2 es leer libros de harry poter</h1>
+    <h3>apps</h3>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/JMbp5cUb4EMGHeL7xbzL4PqcvYxsTvpePuYoDVz0gcw/embed"></iframe>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/2ODJiZMhyX14Mo-EXdWVd0eNzWpYtV4-UB294igq-Ok/embed"></iframe>
+    <h3>juegos</h3>
+    <a href="https://studio.code.org/projects/spritelab/t8jpI0F5sqxJSPiubAKZatJAzXU6F7gg3pAF3TzmyJ0"> <img src="shutterstock_290291369-1.jpg"> </a>
+    <a href="https://studio.code.org/projects/spritelab/JK4VkYdwU6488yzZ76haA0aXivA8KFXrJQ5Ua0Bntz0" target="_blank"><img src="shutterstock_290291369-1.jpg"></a>
+    <h3>chatbots</h3>
+    <iframe
+    allow="microphone;"
+    width="350"
+    height="430"
+    src="https://console.dialogflow.com/api-client/demo/embedded/244255b5-f57e-47df-8411-f22bb9cfbb70">
+</iframe>
+    <h3>extar</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xCVUDGZZ4C4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
 </body>
 
 </html>
